--- a/config/config.json
+++ b/config/config.json
@@ -1,8 +1,9 @@
 {
   "development": {
     "username": "root",
-    "password": null,
-    "database": "database_development",
+    "password": "",
+    "port": 3306,
+    "database": "testing",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
