--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-fileupload": "^1.4.0",
     "fs": "^0.0.1-security",
     "moment": "^2.29.4",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
     "path": "^0.12.7",
     "sequelize": "^6.21.3",
